[gd_scene load_steps=15 format=3 uid="uid://bu6lfyqmq1wnj"]

[ext_resource type="Script" path="res://scripts/level 2 script/playertest.gd" id="1_sn0ob"]
[ext_resource type="Texture2D" uid="uid://cs6457gi3pxwl" path="res://icon.svg" id="1_w5t3j"]
[ext_resource type="Resource" uid="uid://bkyauqww1v81h" path="res://scenes/levels/global/inventory/playerInventory.tres" id="2_ycox4"]
[ext_resource type="Script" path="res://scripts/global/weapon.gd" id="4_snl4j"]
[ext_resource type="PackedScene" uid="uid://pci3w812jsc5" path="res://scenes/levels/global/sword.tscn" id="4_ud8vo"]

[sub_resource type="Animation" id="Animation_mpdk7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("weapon/sword:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-9.4282, -0.330127)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("weapon/sword:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-1.30027]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("weapon/sword:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, 2)]
}

[sub_resource type="Animation" id="Animation_x0whc"]
resource_name = "attackRight"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("weapon/sword:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-7.69615, -1.33013), Vector2(-7.69615, -1.33013)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("weapon/sword:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-1.30027, 0.331613]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("weapon/sword:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(2, 2), Vector2(2, 2)]
}

[sub_resource type="Animation" id="Animation_l0cpb"]
resource_name = "attackLeft"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("weapon/sword:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1.16987, 12.0263), Vector2(1.16987, 12.0263)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("weapon/sword:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-2.85012, -4.60069]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("weapon/sword:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(2, 2), Vector2(2, 2)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v3b6q"]
_data = {
"RESET": SubResource("Animation_mpdk7"),
"attackLeft": SubResource("Animation_l0cpb"),
"attackRight": SubResource("Animation_x0whc")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u8dmm"]
size = Vector2(16, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_thwgw"]
size = Vector2(16, 12)

[sub_resource type="Animation" id="Animation_x4qp4"]
resource_name = "hurtBlink"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0001, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 0.952941, 0.945098, 0.478431), Color(1, 0.952941, 0.945098, 0), Color(1, 0.952941, 0.945098, 0.478431)]
}

[sub_resource type="Animation" id="Animation_a4hxx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0.952941, 0.945098, 0.478431)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_chyul"]
_data = {
"RESET": SubResource("Animation_a4hxx"),
"hurtBlink": SubResource("Animation_x4qp4")
}

[node name="Playertest" type="CharacterBody2D"]
position = Vector2(1, -7)
collision_mask = 2
script = ExtResource("1_sn0ob")
inventory = ExtResource("2_ycox4")

[node name="Sprite2D" type="Sprite2D" parent="."]
clip_children = 2
position = Vector2(-2, -6)
scale = Vector2(0.125, 0.09375)
texture = ExtResource("1_w5t3j")

[node name="ColorRect" type="ColorRect" parent="Sprite2D"]
offset_left = -80.0
offset_top = -85.3333
offset_right = 72.0
offset_bottom = 84.6667
color = Color(1, 0.952941, 0.945098, 0.478431)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_v3b6q")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, -6)
shape = SubResource("RectangleShape2D_u8dmm")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -27)
zoom = Vector2(2, 2)
position_smoothing_speed = 10.0

[node name="hurtBox" type="Area2D" parent="."]
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtBox"]
position = Vector2(-2, -6)
shape = SubResource("RectangleShape2D_thwgw")

[node name="Effects" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_chyul")
}

[node name="hurtTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="weapon" type="Node2D" parent="."]
rotation = 2.0944
script = ExtResource("4_snl4j")

[node name="sword" parent="weapon" instance=ExtResource("4_ud8vo")]
position = Vector2(-9.4282, -0.330127)
rotation = -1.30027
scale = Vector2(2, 2)

[connection signal="area_entered" from="hurtBox" to="." method="_on_hurt_box_area_entered"]
[connection signal="area_exited" from="hurtBox" to="." method="_on_hurt_box_area_exited"]
